--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
+{% load static %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
-    <title>Passagem</title>
-</head>
-<body>
-    <section class="container mt-2">
-        <h1>Passagem</h1>
-        <form action="{% url 'minha_consulta' %}" method="post">
-            {% csrf_token %}
-            {{ form }}
-            <input type="submit" value='OK' name="submit" class="btn btn-success">
-        </form>
-    </section>
-    
-    
-</body>
-</html>
+{% block content %}
+        <section class="col-8">
+            <form action="{% url 'minha_consulta' %}" method="post">
+                {% csrf_token %}
+                {% for field in form.visible_fields %}
+                    <div class="form-group">
+                        <label for="{{field.id_for_label}}">{{field.label}}</label>
+                        {{field}}
+                    </div>
+                {% endfor %}
+                <input type="submit" value='OK' name="submit" class="btn btn-success">
+            </form>
+        </section>  
+{% endblock %}
