--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
+{% load static %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+{% block content %}
 
-    <title>Passagem</title>
-</head>
-<body>
-    <section class="container mt-2">
-        <h1>Passagem</h1>
         <p>Sua origem é: {{ form.origem.value }}</p>
         <p>Seu destino é: {{ form.destino.value }}</p>
         <p>Sua data de ida é: {{ form.data_ida.value }}</p>
         <p>Sua data de volta é: {{ form.data_volta.value }}</p>
-    </section>
+        <p>Pesquisa realizada em: {{ form.date_pesquisa.value }}</p>
+        <p>Sua classe de vôo é: {{ form.classe_viagem.value }}</p>
+        <p>Informações Extras: {{ form.informacoes.value }}</p>
+        <p>Seu email: {{ form.email.value }}</p>
     
-    
-</body>
-</html>
+{% endblock %}
