--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load widget_tweaks %}
+
 
 {% block content %}
-        <section class="col-8">
+        <section class="container col-8">
             <form action="{% url 'minha_consulta' %}" method="post">
                 {% csrf_token %}
                 {% for field in form.visible_fields %}
                     <div class="form-group">
                         <label for="{{field.id_for_label}}">{{field.label}}</label>
-                        {{field}}
+                        {{field|add_class:"form-control"}}
                     </div>
                 {% endfor %}
                 <input type="submit" value='OK' name="submit" class="btn btn-success">
