--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
                         <label for="{{field.id_for_label}}">{{field.label}}</label>
                         {{field|add_class:"form-control"}}
                     </div>
+                    {% for error in field.errors %}
+                        <section class="alert alert-danger" role="alert">
+                            {{ error }}
+                        </section>    
+                    {% endfor %}
                 {% endfor %}
                 <input type="submit" value='OK' name="submit" class="btn btn-success">
             </form>
