feat: added PessoaForm on forms.py

--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -10,6 +10,6 @@
         <p>Pesquisa realizada em: {{ form.date_pesquisa.value }}</p>
         <p>Sua classe de vôo é: {{ form.classe_viagem.value }}</p>
         <p>Informações Extras: {{ form.informacoes.value }}</p>
-        <p>Seu email: {{ form.email.value }}</p>
+        <p>Seu email: {{ pessoa_form.email.value }}</p>
     
 {% endblock %}
