--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,14 @@
                         </section>    
                     {% endfor %}
                 {% endfor %}
+
+                {% for field in pessoa_form.visible_fields %}
+                    <div class="form-group">
+                        <label for="{{field.id_for_label}}">{{field.label}}</label>
+                        {{field|add_class:"form-control"}}
+                    </div>
+                {% endfor %}
+                
                 <input type="submit" value='OK' name="submit" class="btn btn-success">
             </form>
         </section>  
